# unraid-cli

./: .editorconfig  .gitignore  .golangci.yml  Cargo.toml  LICENSE  Makefile  README.md  build.rs  cliff.toml  genqlient.yaml  go.mod  go.sum  tools.go
.github/workflows/: ci.yml  release.yml
cmd/generate-capabilities/: main.go
cmd/unraid/: main.go
graphql/: schema.sha256
graphql/mutations/array/: set_state.graphql
graphql/mutations/docker/: pause_container.graphql  stop_container.graphql  unpause_container.graphql
graphql/mutations/vm/: pause_vm.graphql  stop_vm.graphql
graphql/queries/: array.graphql  container_logs.graphql  containers.graphql  log_file.graphql  log_files.graphql  notifications.graphql  server_version.graphql  vms.graphql
internal/client/: client.go  client_test.go  generate.go  generated.go  introspect.go  introspect_gen.go  introspect_test.go
internal/commands/: array.go  array_test.go  capabilities.go  capabilities_test.go  config_cmd.go  context.go  docker.go  docker_test.go  format.go  format_test.go  integration_test.go  output.go  output_test.go  root.go  server.go  server_version.go  vm.go  vm_test.go
internal/config/: config.go  config_test.go
src/: client.rs  config.rs  main.rs
src/commands/: config.rs  docker.rs  mod.rs  vm.rs
src/graphql/: mod.rs
src/graphql/mutations/: start_container.graphql  update_container.graphql
src/graphql/mutations/vm/: force_stop_vm.graphql  reboot_vm.graphql  reset_vm.graphql  resume_vm.graphql  start_vm.graphql
